--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -30,6 +30,7 @@ jobs:
         run: echo "::set-output name=time::$(date +'%Y-%m-%d-%H-%M')"
         
       - name: Create Release
+        permissions: write-all
         id: create-release
         uses: actions/create-release@v1
         env:
