--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -46,5 +46,5 @@ jobs:
         with:
           upload_url: ${{ steps.create-release.outputs.upload_url }}
           asset_path: ./${{ env.LATEX_ROOT }}.pdf
-          asset_name: ${{ env.LATEX_ROOT }}-${{ steps.get-version.outputs.version }}+${{ steps.current-time.outputs.time }}.pdf
+          asset_name: Iannotta-ISE-Thesis.pdf
           asset_content_type: application/pdf
