--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -37,6 +37,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: 'Iannotta-ISE-Thesis'
+          allowUpdates: true
           
       - name: Upload Release Asset
         id: upload-release-asset
