--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -36,7 +36,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: "Iannotta-ISE-Thesis::$(date +'%Y-%m-%d-%H-%M')"
+          tag_name: 'Iannotta-ISE-Thesis+${{ steps.current-time.outputs.time }})'
           
       - name: Upload Release Asset
         id: upload-release-asset
